--- a/ACT04_Cordova/www/css/index.css
+++ b/ACT04_Cordova/www/css/index.css
@@ -16,6 +16,7 @@ body {
     width: 100%;
 	
     background-color: #32383d;
+    background-image: url("../images/fondo.png");
     font-family: 'RobotoRegular', 'Droid Sans', 'Segoe UI', Segoe, 'San Francisco', 'Helvetica Neue', Helvetica, Arial, Geneva, sans-serif;
     font-size: 12px;
 }
